# AAL-ROS2

./: .gitignore  README.md
aal/: package.xml  setup.cfg  setup.py
aal/aal/: adaptation_manager_node.py  launch_as_a_service.py
aal/aal/adaptation_strategies/: __init__.py  adaptation_strategy.py  bandit_adaptation_strategy.py  markov_chain_adaptation_strategy.py  mdp_adaptation_strategy.py  prism_adaptation_strategy.py  random_adaptation_strategy.py
aal/aal/adaptation_strategies/models/: base_mission.pctl  base_mission.sm  base_model.pm  final_model.pm  model.pm  properties.pctl
aal/aal/demos/: change_topics.py  publisher_A.py  publisher_B.py  subscriber.py  swap_two_publishers.py
aal/aal/testing/: max_velocity.py
aal/launch/: change_topics_demo_launch.py  swap_publisher_demo_launch.py
aal_msgs/: CMakeLists.txt  package.xml
aal_msgs/msg/: Adaptation.msg  AdaptationState.msg
aal_msgs/srv/: AdaptArchitecture.srv  AdaptArchitectureExternal.srv  OnlineAdaptation.srv
